# solythesis-artifact

./: .gitmodules  README.md  run.py
bash/: .run_cpu_exp.sh.swp  run_cpu_exp.sh  run_tps_exp.sh
parity/: Cargo.toml  README.md
parity/configs/: config.dev-insecure.toml
parity/ethcore/: Cargo.toml
parity/ethcore/evm/: Cargo.toml
parity/ethcore/evm/src/: instructions.rs  lib.rs
parity/ethcore/service/: Cargo.toml
parity/ethcore/src/: block.rs  executive.rs  lib.rs
parity/ethcore/src/client/: client.rs  traits.rs
parity/ethcore/src/engines/: instant_seal.rs
parity/ethcore/src/machine/: impls.rs
parity/ethcore/src/miner/: miner.rs
parity/ethcore/src/state/: account.rs  mod.rs
parity/parity/: blockchain.rs
parity/parity-clib/: Cargo.toml
parity/secret-store/: Cargo.toml
parity/util/migration-rocksdb/: Cargo.toml
scripts/: README.md  bench.py  replay.py  replay_bec.py  replay_bkc.py  replay_cards.py  replay_cc.py  replay_clv.py  replay_dai.py  replay_doz.py  replay_egg.py  replay_ekt.py  replay_emond.py  replay_hedg.py  replay_hot.py  replay_huobi.py  replay_inb.py  replay_kb.py  replay_land.py  replay_maker.py  replay_mchh.py  replay_mumo.py  replay_packs.py  replay_swipe.py  replay_tether.py  replay_theta.py  replay_trinket.py  replay_vote.py  replay_xin.py  replay_zrx.py
solythesis/: README.md  package-lock.json  package.json
solythesis/contracts/: ERC20_BEC_Solythesis.sol
solythesis/solidity-parser-antlr/: package-lock.json  package.json
solythesis/src/: main.ts
solythesis/surya/: package-lock.json
(+8 files in other folders)
