[package]
name = "migration-rocksdb"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
macros = { path = "../macros" }
kvdb = "0.1"
kvdb-rocksdb = {git = "https://github.com/Leeleo3x/parity-common/", branch="rocksdb"}

[dev-dependencies]
tempdir = "0.3"
